migrate to swarm mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ services:
   techie-site:
     build: .
     image: techie-site:latest
-    container_name: techie-site
-    restart: unless-stopped
     networks:
       - traefik-network
     labels:
@@ -32,6 +30,17 @@ services:
       - ALL
     cap_add: []
     stop_grace_period: 20s
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: unless-stopped
+      update_config:
+        parallelism: 1
+        delay: 10s
+        failure_action: rollback
+      rollback_config:
+        parallelism: 1
+        delay: 0s
 
 networks:
   traefik-network:
