Convert to Docker Swarm mode with security hardening
- Converted docker-compose.yml to Swarm mode
- Added deploy section with resource limits and restart policies
- Applied security hardening: read-only filesystem, dropped capabilities
- Added health check using curl
- Moved Traefik labels to service level
- Fixed middleware reference to use @docker provider

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,38 +6,50 @@ services:
       - traefik-network
     labels:
       - "traefik.enable=true"
-
       # Router: match Host AND PathPrefix /site2
       - "traefik.http.routers.techie-site.rule=(Host(`jslabs.es`) || Host(`jslabs.eu`) || Host(`jslabs.ddns.net`)) && PathPrefix(`/site2`)"
       - "traefik.http.routers.techie-site.entrypoints=websecure"
       - "traefik.http.routers.techie-site.tls=true"
       - "traefik.http.routers.techie-site.tls.certresolver=letsencrypt"
-
       # Apply the strip-prefix middleware (defined inline as a label)
       - "traefik.http.routers.techie-site.middlewares=site2-strip@docker"
       - "traefik.http.middlewares.site2-strip.stripprefix.prefixes=/site2"
-
       # Backend internal port
       - "traefik.http.services.techie-site.loadbalancer.server.port=8000"
-
+      - "traefik.docker.network=traefik-network"
     read_only: true
     tmpfs:
-      - /tmp
-      - /var/run
-    security_opt:
-      - no-new-privileges:true
+      - /tmp:rw,nosuid,nodev,noexec,mode=1777
+      - /var/run:rw,nosuid,nodev,noexec,mode=0755
     cap_drop:
       - ALL
     cap_add: []
     stop_grace_period: 20s
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://localhost:8000"]
+      interval: 15s
+      timeout: 5s
+      retries: 2
+      start_period: 10s
     deploy:
       replicas: 1
       restart_policy:
-        condition: unless-stopped
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
       update_config:
         parallelism: 1
         delay: 10s
         failure_action: rollback
+        monitor: 60s
+        order: start-first
       rollback_config:
         parallelism: 1
         delay: 0s
